@@ -1,4 +1,4 @@
-./inc/
+inc/*
 Thumbs.db
 Gitalist-*
 *.swp
