@@ -1,5 +1,7 @@
 This file documents the revision history for Perl extension Gitalist.
 
+    - Fix for distribution by not including script/env
+
 0.002001 2010-07-03
     - Fix for loadCommitInfo.
     - Fix tests to work with local-libbery.
